# ChatGemini

./: .dockerignore  .gitignore  Dockerfile  README.md  README_CN.md  compose.yml  config.example.json  pyproject.toml
chatgemini/: __init__.py  __main__.py  config.py  gemini.py  media.py  messages.py  richtext.py  server.py  sessions.py  webapi_backend.py
tests/: test_chatgemini.py
